# odoo-json2x

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
odoo_json2x/simple_json2/: json2_client.py  json2_connection.py
