[project]
name = "odoo-json2x"
authors = [{name = "Joan A. Pinol  (japinol)"}]
version = "0.0.1"
classifiers = [
    "License :: MIT License",
]
requires-python=">=3.13"
dependencies = [
    "httpx>=0.28.1,<2",
]

[project.optional-dependencies]
test = [
]

[project.urls]
Home = "https://github.com/japinol7/odoo-json2x"
